[tool.poetry]
name = "tv-fuzzy-led"
version = "0.1.0"
description = ""
authors = ["Shah Azizie <shahazizie360@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
fuzzy-expert = "0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
